objects/Account.object
<CustomObject>
    <fields>
        <fullName>Current_Desking_Version__c</fullName>
        <description>Updated by MotoSnap sync.</description>
        <label>Current Desking Version</label>
        <picklist>
            <picklistValues>
                <fullName>Legacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currently_Using_Analytics__c</fullName>
        <description>Haystak</description>
        <label>Currently Using Analytics?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currently_Using_PPC__c</fullName>
        <description>haystak field</description>
        <label>Currently Using PPC?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Age__c</fullName>
        <formula>IF(  ISPICKVAL(Status__c, &quot;Active&quot;) &amp;&amp;  AccountNumber != NULL,  (Today() - Created_Date__c) , Null)</formula>
        <inlineHelpText>formula field that takes today&apos;s date less the customer created date to calculate the # of days a customer has been active.  Used for support reporting</inlineHelpText>
        <label>Customer Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Created_Status__c</fullName>
        <formula>IF( 
   ISBLANK(Created_Date__c),
   null,
   IF(
      Created_Date__c &lt; DATE(2011,01,01), 
      &quot;Existing&quot;, 
      &quot;New&quot;
   )
)</formula>
        <inlineHelpText>formula field that looks at the Account Created Date and if it is prior to 1/1/2011 the account is an existing account, if not it is a new account for 2011</inlineHelpText>
        <label>Customer Created Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Standing__c</fullName>
        <inlineHelpText>The financial standing of the customer. Restricted indicates the customer is in lockdown for payment missing. Hibernating is only set because of natural disaster or other circumstances that close the dealer temporarily.</inlineHelpText>
        <label>Customer Standing</label>
        <picklist>
            <picklistValues>
                <fullName>Good Standing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Hibernating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restricted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMS_Account_Number__c</fullName>
        <label>DMS Account Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Config_Type__c</fullName>
        <description>Defines how the Inventory file is collected</description>
        <inlineHelpText>Defines how the Inventory file is collected</inlineHelpText>
        <label>DMS Config Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Link__c</fullName>
        <description>Use this area to record IntegraLink FTP details</description>
        <label>DMS Link</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMS_Log_On__c</fullName>
        <label>DMS Log On</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Package_Level__c</fullName>
        <label>DMS Package Level</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_Password__c</fullName>
        <label>DMS Password</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS_System__c</fullName>
        <inlineHelpText>for active dealers - updated by the sync program from admin&gt;&gt;selected dealer&gt;&gt;dms integration setup</inlineHelpText>
        <label>DMS System</label>
        <picklist>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP3PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autobase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Mate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Tracker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Car Biz MSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CarThink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Citrix</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Click</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealerTrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FEI Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frazer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Genisys</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grapevine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti.net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovative Dealer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jarvis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightyear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Money Maker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMS_Type__c</fullName>
        <label>DMS Type</label>
        <picklist>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP Web1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona/DealerTrack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auction123/ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automanager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoSoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DDS Debuque Data Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer pushes Data to us</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDS (Saturn)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDS and CDM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDS AS 400</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grapevine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomeNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti Net</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DealerBuilt/LightYear</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meadowland Systems</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MPK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quorum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R &amp; R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Select Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtual Motors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMS_VPN__c</fullName>
        <description>Use this area to hold VPN IP information and Login details</description>
        <label>DMS VPN</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data_Appends__c</fullName>
        <label>Data Appends</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)
&amp;&quot;&quot;&amp;IF( ISPICKVAL( Dealer_Type__c ,&quot;&quot;), &quot;Dealer Type, &quot;,&quot;&quot;)
&amp;&quot;&quot;&amp;IF( ISPICKVAL( Lot_Size_New__c ,&quot;&quot;), &quot;Lot Size New, &quot;,&quot;&quot;)
&amp;&quot;&quot;&amp;IF( ISPICKVAL(Lot_Size_Used__c,&quot;&quot;), &quot;Lot Size Used, &quot;,&quot;&quot;)
&amp;&quot;&quot;&amp;IF( ISBLANK( Website ), &quot;Website, &quot;,&quot;&quot;)
&amp;&quot;&quot;&amp;IF( ISBLANK(  Franchise__c), &quot;Nameplates, &quot;,&quot;&quot;)
&amp;&quot;&quot;&amp;IF( ISBLANK(   ShippingStreet ), &quot;Physical Location, &quot;,&quot;&quot;)
&amp;&quot;&quot;&amp;IF( ISBLANK(   BillingStreet ), &quot;Billing Address, &quot;,&quot;&quot;))</formula>
        <inlineHelpText>display missing information required for SVOC verification</inlineHelpText>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Message__c</fullName>
        <formula>IF(Data_Quality_Score__c = 100, NULL, IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000021NwW&amp;oid=00D700000008zHZ&amp;lastMod=1414544273000&quot;, &quot;Missing Data&quot;))</formula>
        <inlineHelpText>shows a visual to the user showing the status of the required fields needed for SVOC verification</inlineHelpText>
        <label>Data Quality Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(  Type  ,&quot;&quot;), 0,16.66) + IF( ISPICKVAL(  Dealer_Type__c  ,&quot;&quot;), 0,16.66) + IF( ISPICKVAL(  Lot_Size_New__c  ,&quot;&quot;), 0,16.66) + IF( ISPICKVAL(  Lot_Size_Used__c  ,&quot;&quot;), 0,16.66) + IF( ISBLANK(  Website ), 0,16.66)+ IF( ISBLANK(   Franchise__c  ), 0,16.66)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>shows the percent of information entered, 100 equals account ready for SVOC Verification</inlineHelpText>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Deactivated__c</fullName>
        <label>Date Deactivated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deactivation_Reasons__c</fullName>
        <label>Deactivation Reasons</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Brand Compliancy/OEM Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Mgmt./Mgmt. Preference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cutting Expenses/Billing Redundancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Import Accuracy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Import Turnaround from 3rd Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Import Turnaround - Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership Closed/Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functionality Sold Did Not Meet Specific Needs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General System Issues - Downtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improper Resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Available Trainers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Knowledgeable Representative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of New Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Utilization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modification to Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Contact - Dealer Unresponsive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Payment/Forced Cancellation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resolution Timeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Performance Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Too Expensive/Lower Competitive Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_MRR__c</fullName>
        <description>Total MRR for all parent and child accounts under one group.
NOT WORKING - Code behind this needs to be revised.</description>
        <label>Dealer Group MRR (NOT WORKING)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Notes__c</fullName>
        <label>Dealer Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Principal__c</fullName>
        <label>Dealer Principal</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Time__c</fullName>
        <formula>NOW()+case( Time_Zone__c ,
&quot;Eastern&quot;, (1/24),
&quot;Mountain&quot;,-(1/24),
&quot;Pacific&quot;,-(2/24),
&quot;Alaska&quot;,-(3/24),
&quot;Hawaii&quot;,-(4/24),
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The Time is calculated base on Local User Time (assumes Central Standard Time)</inlineHelpText>
        <label>Dealer Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dealer_Type__c</fullName>
        <inlineHelpText>Select Franchise or Independent.</inlineHelpText>
        <label>Dealer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_com_Website__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box is checked by workflow firing from a Closed/Won Opportunity where the information is obtained.</description>
        <label>Dealer.com Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealership_IP_Address__c</fullName>
        <description>Haystak</description>
        <label>Dealership IP Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deleted_Billing_Item_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by apex trigger in (classname.method) when a Billing Item is deleted to kick off Flow Trigger for Flow &quot;Set Account Billing Type&quot;. Should be unchecked automatically by same Flow.</description>
        <label>NOT USED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Delivery_Method__c</fullName>
        <label>Delivery Method</label>
        <picklist>
            <picklistValues>
                <fullName>FTP Drop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FTP Pull</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email (ADF Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Desking_Verification__c</fullName>
        <label>Desking Verification</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discussed_AutoProcess__c</fullName>
        <label>Discussed AutoProcess</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Banner_Completed__c</fullName>
        <label>Email Banner - Completed?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Equity_Customers__c</fullName>
        <description>Number of customers in equity from campaigns.</description>
        <label>Equity Customers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Equity_Tool__c</fullName>
        <inlineHelpText>What tool is the dealership using?</inlineHelpText>
        <label>Equity Tool</label>
        <picklist>
            <picklistValues>
                <fullName>Auto Alert</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoLoop (CarResearch)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deal Activator (Dominion)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elead (GoldDigger &amp; Perfect Prospect)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revenue Radar (Socket)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SmartDrive (RedBumper)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VehicleXchange (CDK)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vin Target</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Exception_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exception Perf Mgr</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Exception_DDM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exception DDM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Executive_Spotlight__c</fullName>
        <inlineHelpText>Can only be set by certain executive team members.</inlineHelpText>
        <label>Executive Spotlight</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FN__Find_Nearby__c</fullName>
        <formula>IF( ISPICKVAL( FN__Mapping_Status__c  , &apos;Located&apos;), HYPERLINK( &quot;apex/FN__FindNearbymap?lid=null&amp;aid=&quot; &amp; Id,&quot;Map it!&quot;,&quot;_parent&quot;) , HYPERLINK( &quot;apex/FN__AGeoCode?id=&quot; &amp; Id,&quot;Locate Account&quot;,&quot;_parent&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Find Nearby</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FN__Lat__c</fullName>
        <label>Latitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Lon__c</fullName>
        <label>Longitude</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FN__Mapping_Status__c</fullName>
        <label>Mapping Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Located Yet</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Located</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem with Address</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bad Google Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Exhausted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FN__Which_Address__c</fullName>
        <label>Mapping Address</label>
        <picklist>
            <picklistValues>
                <fullName>Billing</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do Not Map</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Flag_for_Heat__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>used to Flag an account as a Heat account</inlineHelpText>
        <label>Flag for Heat</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Flag_for_Merge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>updated by the integration system with the results from a SVOC request. If the unverified prospect account already exists as a primary or secondary this box will be checked. Workflow will trigger a task to the admin to merge tertiary data</description>
        <inlineHelpText>updated by the integration system with the results from a SVOC request</inlineHelpText>
        <label>Flag for Merge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Franchise_Independent__c</fullName>
        <label>Franchise/Independent</label>
        <picklist>
            <picklistValues>
                <fullName>Franchise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Franchise_Type__c</fullName>
        <label>vAuto Franchise Type</label>
        <picklist>
            <picklistValues>
                <fullName>Domestic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxury</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Franchise__c</fullName>
        <label>Nameplates</label>
        <picklist>
            <picklistValues>
                <fullName>Independent Dealer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acura</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Audi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austin Martin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bentley</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bugatti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cadillac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chevrolet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrysler</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dodge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ferrari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fiat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fisker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ford</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harley Davidson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hummer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyundai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infiniti</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Isuzu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jaguar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jeep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lamborghini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Land Rover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lexus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lincoln</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GL_MRR__c</fullName>
        <inlineHelpText>references the BU Spend object and sums the recurring revenue for all active product related to Genius Labs/Auction Genius/KBB Product Suite</inlineHelpText>
        <label>GL MRR</label>
        <summarizedField>BU_Spend__c.Spend__c</summarizedField>
        <summaryFilterItems>
            <field>BU_Spend__c.Product_Group__c</field>
            <operation>equals</operation>
            <value>Genius Labs, Auction Genius, KBB PAR Used, KBB PAR New</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>BU_Spend__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active, Delivered, Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>BU_Spend__c.Dealer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GM_BAC_Number__c</fullName>
        <description>Business Associate Code</description>
        <label>GM BAC Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_and_Age__c</fullName>
        <label>Gender and Age</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Chrysler Business Centers (BOC)</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Den</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>HAY_District__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HAY District</label>
        <referenceTo>District__c</referenceTo>
        <relationshipLabel>Accounts (HAY District)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HAY_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>HAY Region</label>
        <referenceTo>Region__c</referenceTo>
        <relationshipLabel>Accounts (HAY Region)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Has_S14_Products__c</fullName>
        <label>Has S14 Products</label>
        <picklist>
            <picklistValues>
                <fullName>Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haystak Search Essentials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Website &amp; Search Essentials</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hay_SA_Flair__c</fullName>
        <description>Haystak</description>
        <formula>IF( ISPICKVAL(Haystak_Strategic_Account__c,&quot;Yes&quot;),IMAGE(&quot;/servlet/servlet.ImageServer?id=015700000021ew4&amp;oid=00D700000008zHZ&amp;lastMod=1430246035000&quot;,&quot;Strategic&quot;) , NULL)</formula>
        <inlineHelpText>formula field that displays an image if the Haystak Strategic Account field = Yes</inlineHelpText>
        <label>Haystak Account Flair</label>
        <type>Text</type>
    </fields>
</CustomObject>